[package]
name = "qst-staking"
version = "0.1.0"
description = "QST Token Staking Protocol - Earn node keys and bonus rewards through time-locked staking"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "qst_staking_mainnet"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"